# rust-boilerplate

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  renovate.json
.github/: labeler.yml  labels.yml
.github/workflows/: ci.yml  label_sync.yml  labeler.yml  publish.yml
examples/: example.rs
src/: lib.rs
tests/: test_lib.rs
